[tool.poetry]
name = "actymath"
version = "0.1.2"
description = "Actuarial Math and commutation functions for life insurance product - with a Pandas backend"
authors = ["Matt Gosden <mdgosden@gmail.com>"]
license = "MIT"
readme = 'README.md'
homepage = "https://github.com/ttamg/actymath"
repository = "https://github.com/ttamg/actymath"
exclude = ["notebooks"]
keywords = ["actuarial", "pandas", "insurance"]

[tool.poetry.dependencies]
python = ">=3.8 <4.0"
pandas = "^2.0.0"
parse = "^1.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pylint = "^2.17.2"
black = "^23.3.0"
pytest-randomly = "^3.12.0"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
